Update gather icons and tweak settings desc.

--- a/package.json
+++ b/package.json
@@ -1833,13 +1833,13 @@
                 "python.dataScience.enableGather": {
                     "type": "boolean",
                     "default": true,
-                    "description": "Enable experimental gather feature for executed cells. For a gathered cell, that cell and only the code it depends on will be exported to a new notebook.",
+                    "description": "Python Insiders Only: Enable experimental gather feature for executed cells. For a gathered cell, that cell and only the code it depends on will be exported to a new notebook.",
                     "scope": "resource"
                 },
                 "python.dataScience.gatherToScript": {
                     "type": "boolean",
                     "default": false,
-                    "description": "If experimental gather feature is enabled, gather code to a python script rather than a notebook.",
+                    "description": "Python Insiders Only: If experimental gather feature is enabled, gather code to a python script rather than a notebook.",
                     "scope": "resource"
                 },
                 "python.dataScience.codeLenses": {
