--- a/package.json
+++ b/package.json
@@ -2868,6 +2868,7 @@
         "@jupyterlab/services": "^4.2.0",
         "@koa/cors": "^3.0.0",
         "@loadable/component": "^5.12.0",
+        "@nteract/messaging": "^7.0.0",
         "@types/jsonfile": "^5.0.0",
         "@types/mkdirp": "^1.0.0",
         "ansi-regex": "^4.1.0",
@@ -2875,6 +2876,7 @@
         "azure-storage": "^2.10.3",
         "detect-indent": "^6.0.0",
         "diff-match-patch": "^1.0.0",
+        "enchannel-zmq-backend": "^9.1.15",
         "execa": "^4.0.0",
         "fast-deep-equal": "^2.0.1",
         "fs-extra": "^4.0.3",
