--- a/package.json
+++ b/package.json
@@ -2873,6 +2873,7 @@
         "azure-storage": "^2.10.3",
         "detect-indent": "^6.0.0",
         "diff-match-patch": "^1.0.0",
+        "enchannel-zmq-backend": "^9.1.15",
         "fast-deep-equal": "^2.0.1",
         "fs-extra": "^4.0.3",
         "fuzzy": "^0.1.3",
