--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -234,12 +234,12 @@
                 "--ui=tdd",
                 "--recursive",
                 "--colors",
-                "--grep", "LiveLoss",
+                //"--grep", "<suite>",
                 "--timeout=300000"
             ],
             "env": {
                 // Remove `X` prefix to test with real python (for DS functional tests).
-                "VSCODE_PYTHON_ROLLING": "1",
+                "XVSCODE_PYTHON_ROLLING": "1",
                 // Remove 'X' to turn on all logging in the debug output
                 "XVSC_PYTHON_FORCE_LOGGING": "1",
                 // Remove `X` prefix and update path to test with real python interpreter (for DS functional tests).
