--- a/package.json
+++ b/package.json
@@ -2999,6 +2999,7 @@
         "@types/chai-arrays": "^1.0.2",
         "@types/chai-as-promised": "^7.1.0",
         "@types/copy-webpack-plugin": "^4.4.2",
+        "@types/cors": "^2.8.6",
         "@types/dedent": "^0.7.0",
         "@types/del": "^3.0.0",
         "@types/diff-match-patch": "^1.0.32",
@@ -3037,6 +3038,7 @@
         "@types/semver": "^5.5.0",
         "@types/shortid": "^0.0.29",
         "@types/sinon": "^7.5.1",
+        "@types/socket.io": "^2.1.4",
         "@types/stack-trace": "0.0.29",
         "@types/temp": "^0.8.32",
         "@types/tmp": "0.0.33",
@@ -3065,6 +3067,7 @@
         "codecov": "^3.6.5",
         "colors": "^1.2.1",
         "copy-webpack-plugin": "^5.1.1",
+        "cors": "^2.8.5",
         "cross-env": "^6.0.3",
         "cross-spawn": "^6.0.5",
         "css-loader": "^1.0.1",
@@ -3077,6 +3080,7 @@
         "eslint-plugin-prettier": "^3.1.2",
         "event-stream": "3.3.4",
         "expose-loader": "^0.7.5",
+        "express": "^4.17.1",
         "extract-zip": "^1.6.7",
         "fast-xml-parser": "^3.16.0",
         "file-loader": "^5.1.0",
@@ -3142,6 +3146,7 @@
         "shortid": "^2.2.8",
         "sinon": "^8.0.1",
         "slickgrid": "^2.4.17",
+        "socket.io": "^2.3.0",
         "source-map-support": "^0.5.12",
         "style-loader": "^0.23.1",
         "styled-jsx": "^3.1.0",
