Function UI tests for DS notebook

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,35 +22,6 @@
             ]
         },
         {
-            "name": "Extension (DS UI in Browser)",
-            "type": "extensionHost",
-            "request": "launch",
-            "runtimeExecutable": "${execPath}",
-            "args": [
-                "--extensionDevelopmentPath=${workspaceFolder}"
-            ],
-            "stopOnEntry": false,
-            "smartStep": true,
-            "sourceMaps": true,
-            "outFiles": [
-                "${workspaceFolder}/out/**/*"
-            ],
-            "preLaunchTask": "Compile",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "env": {
-                // When set, DS UI will be displayed in a browser instaed of VSCode WebView.
-                "VSC_PYTHON_DS_UI_BROWSER": "true",
-                // Port number to launch a webserver, if not defined, will use a random port.
-                // Use with care, if you open multiple notebooks or data frame viewer, then all will share same host and things will NOT work as expected.
-                "XVSC_PYTHON_DS_UI_PORT": "3000",
-                // When set, VSC will display a message indicating WebServer is ready to view DS React UI in browser.
-                // Message will contain the link (server address).
-                "VSC_PYTHON_DS_UI_PROMPT": "true"
-            }
-        },
-        {
             "name": "Extension inside container",
             "type": "extensionHost",
             "request": "launch",
@@ -258,15 +229,18 @@
             "stopOnEntry": false,
             "sourceMaps": true,
             "args": [
-                "./out/test/**/*.functional.test.js",
+                "./out/test/**/*.ui.functional.test.js",
                 "--require=out/test/unittests.js",
                 "--ui=tdd",
                 "--recursive",
                 "--colors",
-                //"--grep", "<suite>",
-                "--timeout=300000"
+                "--grep",
+                "yyy",
+                "--timeout=300000",
+                "--fast"
             ],
             "env": {
+                "VSC_PYTHON_DS_UI_BROWSER": "1",
                 // Remove `X` prefix to test with real python (for DS functional tests).
                 "XVSCODE_PYTHON_ROLLING": "1",
                 // Remove 'X' to turn on all logging in the debug output
@@ -277,7 +251,7 @@
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
             ],
-            "preLaunchTask": "Compile",
+            // "preLaunchTask": "Compile",
             "skipFiles": [
                 "<node_internals>/**"
             ]
