--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,7 +254,7 @@ jobs:
         run: |
           python -m pip --disable-pip-version-check install -r build/debugger-install-requirements.txt
           python ./pythonFiles/install_debugpy.py
-        if: steps.pythonFiles-cache.outputs.cache-hit == false && startsWith(matrix.python, "3.")
+        if: steps.pythonFiles-cache.outputs.cache-hit == false && startsWith(matrix.python, '3.')
 
       - name: Install test requirements
         run: python -m pip install --upgrade -r build/test-requirements.txt
