--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,7 +254,7 @@ jobs:
         run: |
           python -m pip --disable-pip-version-check install -r build/debugger-install-requirements.txt
           python ./pythonFiles/install_debugpy.py
-        if: steps.pythonFiles-cache.outputs.cache-hit == false && startsWith(matrix.python, '3.')
+        if: steps.pythonFiles-cache.outputs.cache-hit == false && startsWith(matrix.python, 3.)
 
       - name: Install test requirements
         run: python -m pip install --upgrade -r build/test-requirements.txt
@@ -321,7 +321,7 @@ jobs:
       # Run TypeScript unit tests only for Python 3.X.
       - name: Run TypeScript unit tests
         run: npm run test:unittests:cover
-        if: matrix.test-suite == 'ts-unit' && startsWith(matrix.python, "3.")
+        if: matrix.test-suite == 'ts-unit' && startsWith(matrix.python, 3.)
 
       # Upload unit test coverage reports for later use in the "reports" job.
       - name: Upload unit test coverage reports
@@ -329,7 +329,7 @@ jobs:
         with:
           name: ${{runner.os}}-${{env.COVERAGE_REPORTS}}
           path: .nyc_output
-        if: matrix.test-suite == 'ts-unit' && startsWith(matrix.python, "3.")
+        if: matrix.test-suite == 'ts-unit' && startsWith(matrix.python, 3.)
 
       # Run the Python and IPython tests in our codebase.
       - name: Run Python and IPython unit tests
