--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,24 +7,35 @@
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}"
+            ],
             "stopOnEntry": false,
             "smartStep": true,
             "sourceMaps": true,
-            "outFiles": ["${workspaceFolder}/out/**/*"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*"
+            ],
             "preLaunchTask": "Compile",
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             "name": "Extension inside container",
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": ["--extensionDevelopmentPath=${workspaceFolder}", "${workspaceFolder}/data"],
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}",
+                "${workspaceFolder}/data"
+            ],
             "stopOnEntry": false,
             "smartStep": true,
             "sourceMaps": true,
-            "outFiles": ["${workspaceFolder}/out/**/*"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*"
+            ],
             "preLaunchTask": "Compile"
         },
         {
@@ -33,7 +44,9 @@
             "request": "launch",
             "module": "IPython",
             "console": "integratedTerminal",
-            "args": ["${file}"] // Additional args should be prefixed with a '--' first.
+            "args": [
+                "${file}"
+            ] // Additional args should be prefixed with a '--' first.
         },
         {
             "name": "Python: Current File",
@@ -49,12 +62,18 @@
             "program": "${workspaceFolder}/out/client/debugger/debugAdapter/main.js",
             "stopOnEntry": false,
             "smartStep": true,
-            "args": ["--server=4711"],
+            "args": [
+                "--server=4711"
+            ],
             "sourceMaps": true,
-            "outFiles": ["${workspaceFolder}/out/client/**/*.js"],
+            "outFiles": [
+                "${workspaceFolder}/out/client/**/*.js"
+            ],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "Compile",
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             "name": "Tests (Debugger, VS Code, *.test.ts)",
@@ -70,12 +89,16 @@
             "stopOnEntry": false,
             "sourceMaps": true,
             "smartStep": true,
-            "outFiles": ["${workspaceFolder}/out/**/*"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*"
+            ],
             "preLaunchTask": "Compile",
             "env": {
                 "IS_CI_SERVER_TEST_DEBUGGER": "1"
             },
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             // Note, for the smoke test you want to debug, you may need to copy the file,
@@ -95,9 +118,13 @@
             },
             "stopOnEntry": false,
             "sourceMaps": true,
-            "outFiles": ["${workspaceFolder}/out/**/*.js"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js"
+            ],
             "preLaunchTask": "Compile",
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             "name": "Tests (Single Workspace, VS Code, *.test.ts)",
@@ -115,9 +142,13 @@
             },
             "stopOnEntry": false,
             "sourceMaps": true,
-            "outFiles": ["${workspaceFolder}/out/**/*.js"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js"
+            ],
             "preLaunchTask": "Compile",
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             "name": "Tests (Multiroot, VS Code, *.test.ts)",
@@ -133,9 +164,13 @@
             "stopOnEntry": false,
             "sourceMaps": true,
             "smartStep": true,
-            "outFiles": ["${workspaceFolder}/out/**/*"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*"
+            ],
             "preLaunchTask": "Compile",
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             "name": "Unit Tests (without VS Code, *.unit.test.ts)",
@@ -153,9 +188,13 @@
                 //"--grep", "<suite name>",
                 "--timeout=300000"
             ],
-            "outFiles": ["${workspaceFolder}/out/**/*.js"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js"
+            ],
             "preLaunchTask": "Compile",
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             "name": "Unit Tests (fast, without VS Code and without react/monaco, *.unit.test.ts)",
@@ -174,9 +213,13 @@
                 "--timeout=300000",
                 "--fast"
             ],
-            "outFiles": ["${workspaceFolder}/out/**/*.js"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js"
+            ],
             "preLaunchTask": "Compile",
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             "name": "Functional Tests (without VS Code, *.functional.test.ts)",
@@ -191,8 +234,7 @@
                 "--ui=tdd",
                 "--recursive",
                 "--colors",
-                "--grep",
-                "<suite name>",
+                //"--grep", "<suite>",
                 "--timeout=300000"
             ],
             "env": {
@@ -201,25 +243,36 @@
                 // Remove 'X' to turn on all logging in the debug output
                 "XVSC_PYTHON_FORCE_LOGGING": "1",
                 // Remove `X` prefix and update path to test with real python interpreter (for DS functional tests).
-                "XCI_PYTHON_PATH": "<Python Path>"
+                "XCI_PYTHON_PATH": "<Python Path>",
             },
-            "outFiles": ["${workspaceFolder}/out/**/*.js"],
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js"
+            ],
             "preLaunchTask": "Compile",
-            "skipFiles": ["<node_internals>/**"]
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         },
         {
             "type": "node",
             "request": "launch",
             "name": "Gulp tasks (helpful for debugging gulpfile.js)",
             "program": "${workspaceFolder}/node_modules/gulp/bin/gulp.js",
-            "args": ["watch"],
-            "skipFiles": ["<node_internals>/**"]
+            "args": [
+                "watch"
+            ],
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         }
     ],
     "compounds": [
         {
             "name": "Extension + Debugger",
-            "configurations": ["Extension", "Debugger as debugServer"]
+            "configurations": [
+                "Extension",
+                "Debugger as debugServer"
+            ]
         }
     ]
 }
