--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -186,6 +186,7 @@
                 "--recursive",
                 "--colors",
                 //"--grep", "<suite name>",
+                "--grep", "RawSession",
                 "--timeout=300000"
             ],
             "outFiles": [
