Add more pattern

--- a/package.json
+++ b/package.json
@@ -87,15 +87,18 @@
         "onCommand:python.enableSourceMapSupport",
         "onCustomEditor:NativeEditorProvider.ipynb",
         "workspaceContains:setup.py",
+        "workspaceContains:manage.py",
         "workspaceContains:setup.cfg",
         "workspaceContains:MANIFEST.in",
         "workspaceContains:pyproject.toml",
         "workspaceContains:requirements.txt",
-        "workspaceContains:manage.py",
         "workspaceContains:tox.ini",
         "workspaceContains:pytest.ini",
+        "workspaceContains:meta.yml",
+        "workspaceContains:environment.yml",
         "workspaceContains:anaconda-project.yml",
         "workspaceContains:.pep8",
+        "workspaceContains:.ipynb",
         "workspaceContains:.flake8",
         "workspaceContains:.pylintrc",
         "workspaceContains:.pycodestyle"
