Add more pattern

--- a/package.json
+++ b/package.json
@@ -88,10 +88,15 @@
         "onCustomEditor:NativeEditorProvider.ipynb",
         "workspaceContains:setup.py",
         "workspaceContains:manage.py",
+        "workspaceContains:__init__.py",
         "workspaceContains:setup.cfg",
         "workspaceContains:MANIFEST.in",
         "workspaceContains:pyproject.toml",
+        "workspaceContains:Pipfile",
+        "workspaceContains:Pipfile.lock",
+        "workspaceContains:poetry.lock",
         "workspaceContains:requirements.txt",
+        "workspaceContains:test_requirements.txt",
         "workspaceContains:tox.ini",
         "workspaceContains:pytest.ini",
         "workspaceContains:meta.yml",
