--- a/package.json
+++ b/package.json
@@ -1969,6 +1969,12 @@
                         ]
                     ]
                 },
+                "python.dataScience.enableIPyWidgets": {
+                    "type": "boolean",
+                    "description": "Enables IPyWidgets support. This may cause some performance issues even when not using IPyWidgets",
+                    "default": true,
+                    "scope": "resource"
+                },
                 "python.disableInstallationCheck": {
                     "type": "boolean",
                     "default": false,
