Use experiment instead of package.json setting

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,9 @@
             ],
             "env": {
                 // Enable this to turn on redux logging during debugging
-                "XVSC_PYTHON_FORCE_LOGGING": "1"
+                "XVSC_PYTHON_FORCE_LOGGING": "1",
+                // Enable this to try out new experiments locally
+                "XVSC_PYTHON_LOAD_EXPERIMENTS_FROM_FILE" : "1"
             }
         },
         {
