--- a/package.json
+++ b/package.json
@@ -1599,6 +1599,7 @@
                             "UseTerminalToGetActivatedEnvVars - experiment",
                             "CollectLSRequestTiming - experiment",
                             "CollectNodeLSRequestTiming - experiment",
+                            "DeprecatePythonPath - experiment",
                             "All"
                         ]
                     },
