working after refactor, now to clean up

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -216,6 +216,7 @@
                 "--recursive",
                 "--colors",
                 //"--grep", "<suite name>",
+                "--grep", "RawJupyterSession",
                 "--timeout=300000"
             ],
             "outFiles": [
