make sure maxTextSize of -1 also disables the scrollbar

--- a/package.json
+++ b/package.json
@@ -1815,7 +1815,7 @@
                 "python.dataScience.maxOutputSize": {
                     "type": "number",
                     "default": 400,
-                    "description": "Maximum size (in pixels) of text output in the Python Interactive window before a scrollbar appears. First enable scrolling for cell outputs in settings.",
+                    "description": "Maximum size (in pixels) of text output in the Python Interactive window and Notebook Editor before a scrollbar appears. First enable scrolling for cell outputs in settings.",
                     "scope": "resource"
                 },
                 "python.dataScience.enableScrollingForCellOutputs": {
