--- a/package.json
+++ b/package.json
@@ -2958,6 +2958,7 @@
         "reflect-metadata": "^0.1.12",
         "request": "^2.87.0",
         "request-progress": "^3.0.0",
+        "rewire": "^5.0.0",
         "rxjs": "^6.5.4",
         "rxjs-compat": "^6.5.4",
         "sanitize-filename": "^1.6.3",
@@ -3053,6 +3054,7 @@
         "@types/react-virtualized": "^9.21.2",
         "@types/redux-logger": "^3.0.7",
         "@types/request": "^2.47.0",
+        "@types/rewire": "^2.5.28",
         "@types/semver": "^5.5.0",
         "@types/shortid": "^0.0.29",
         "@types/sinon": "^7.5.1",
