Run multiworkspace tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,12 @@ jobs:
         with:
           python-version: ${{env.PYTHON_VERSION}}
 
+      - name: Set CI_PYTHON_PATH and disable autoselection
+        run: |
+          echo "::set-env name=CI_PYTHON_PATH::python"
+          echo "::set-env name=CI_DISABLEAUTOSELECTION::1"
+        shell: bash
+
       - name: Show all env vars
         run: |
           printenv
@@ -142,6 +148,12 @@ jobs:
         with:
           python-version: ${{env.PYTHON_VERSION}}
 
+      - name: Set CI_PYTHON_PATH and disable autoselection
+        run: |
+          echo "::set-env name=CI_PYTHON_PATH::python"
+          echo "::set-env name=CI_DISABLEAUTOSELECTION::1"
+        shell: bash
+
       - name: Show all env vars
         run: |
           printenv
@@ -208,10 +220,10 @@ jobs:
       matrix:
         # We're not running CI on macOS for now because it's one less matrix entry to lower the number of runners used,
         # macOS runners are expensive, and we assume that Ubuntu is enough to cover the UNIX case.
-        os: [ubuntu-latest, windows-latest]
+        os: [windows-latest]
         # Run the tests on the oldest and most recent versions of Python.
         python: [2.7, 3.8]
-        test-suite: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
+        test-suite: [ts-unit, python-unit, multi-workspace]
     env:
       # Something in Node 12.16.0 breaks the TS debug adapter, and ubuntu-latest bundles Node 12.16.1.
       # We can remove this when we switch over to the python-based DA in https://github.com/microsoft/vscode-python/issues/7136.
@@ -251,6 +263,12 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{matrix.python}}
+
+      - name: Set CI_PYTHON_PATH and disable autoselection
+        run: |
+          echo "::set-env name=CI_PYTHON_PATH::python"
+          echo "::set-env name=CI_DISABLEAUTOSELECTION::1"
+        shell: bash
 
       - name: Show all env vars
         run: |
@@ -422,6 +440,15 @@ jobs:
 
       - name: Install dependencies (npm ci)
         run: npm ci --prefer-offline
+
+      - name: Install IPython test requirements
+        run: |
+          python -m pip install numpy
+          python -m pip install --upgrade -r ./build/ipython-test-requirements.txt
+
+      - name: pip install jupyter
+        run: |
+          python -m pip install --upgrade jupyter
 
       - name: Download VSIX
         uses: actions/download-artifact@v1
