--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Show all env vars
+        run: |
+          printenv
+        shell: bash
+
       - name: Use Python ${{env.PYTHON_VERSION}}
         uses: actions/setup-python@v1
         with:
@@ -91,6 +96,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Show all env vars
+        run: |
+          printenv
+        shell: bash
 
       - name: Retrieve cached npm files
         uses: actions/cache@v1
@@ -200,6 +210,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Show all env vars
+        run: |
+          printenv
+        shell: bash
 
       - name: Retrieve cached npm files
         uses: actions/cache@v1
@@ -314,6 +329,13 @@ jobs:
         shell: pwsh
         if: matrix.test-suite == 'venv'
 
+      - name: Set CI_PYTHON_PATH and disable autoselection
+        run: |
+          echo "::set-env name=CI_PYTHON_PATH::python"
+          echo "::set-env name=CI_DISABLE_AUTO_SELECTION::1"
+        shell: bash
+        if: matrix.test-suite != 'ts-unit'
+
       # Run TypeScript unit tests only for Python 3.X.
       - name: Run TypeScript unit tests
         run: npm run test:unittests:cover
@@ -384,6 +406,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Show all env vars
+        run: |
+          printenv
+        shell: bash
+
       - name: Retrieve cached npm files
         uses: actions/cache@v1
         with:
@@ -392,6 +419,15 @@ jobs:
 
       - name: Install dependencies (npm ci)
         run: npm ci --prefer-offline
+
+      - name: Install IPython test requirements
+        run: |
+          python -m pip install numpy
+          python -m pip install --upgrade -r ./build/ipython-test-requirements.txt
+
+      - name: pip install jupyter
+        run: |
+          python -m pip install --upgrade jupyter
 
       - name: Download VSIX
         uses: actions/download-artifact@v1
